@@ -847,6 +847,23 @@ You can reorder the list by drag and drop.</p>
 To remove an element from the list either browse to it and click <b class="button">Unpin</b>, or right-click it and select <b class="button">Unpin</b> from the context menu.
 The list of pinned directories is automatically saved to the configuration file when you quit the program.</p>
 </div>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>You can pin directories also by drag and dropping files or directories to the list.</p>
+</div>
+<div class="paragraph">
+<p>You can drag and drop a file or a directory to the browser to navigate to that file or directory.</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_tips_window">Tips window</h3>
@@ -912,6 +929,20 @@ To apply the changes in this section you need to save the configuration and rest
 </div>
 <div class="paragraph">
 <p>Before being able to create any sprite you need to load at least one texture from here. Clicking the <b class="button">Load</b> button will open the <a href="#_file_dialog">File dialog</a> window. The file dialog will only show files with the <code>png</code> extension.</p>
+</div>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>You can load textures also by drag and dropping files anywhere onto the <code>Textures</code> window.</p>
+</div>
+</td>
+</tr>
+</table>
 </div>
 <div class="paragraph">
 <p>You can delete the selected texture by clicking the <b class="button">Remove</b> button or pressing the <kbd>Delete</kbd> key while the cursor is over this window.</p>
@@ -1064,6 +1095,20 @@ The texture icon at the end of an entry indicates that the sprite is using the c
 </div>
 <div class="paragraph">
 <p>Below you will find some buttons that you can use to <b class="button">Load</b> and <b class="button">Remove</b> Lua scripts as well as <b class="button">Reload</b> them when they have changed on disk.</p>
+</div>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>You can load scripts also by drag and dropping files anywhere onto the <code>Scripts</code> window.</p>
+</div>
+</td>
+</tr>
+</table>
 </div>
 <div class="paragraph">
 <p>You can also delete the selected script by pressing the <kbd>Delete</kbd> key while the cursor is over this window.</p>
@@ -1490,6 +1535,20 @@ This option is useful to show a preview of how the script animation is affecting
 </div>
 <div class="paragraph">
 <p>Clicking the button on top will open the <a href="#_file_dialog">File dialog</a> window to choose a destination directory.</p>
+</div>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>You can change the destination directory also by drag and dropping a file or a directory anywhere onto the <code>Render</code> window.</p>
+</div>
+</td>
+</tr>
+</table>
 </div>
 <div class="paragraph">
 <p>You can then choose a prefix for the files that are going to be created. Just specify a filename without the extension.</p>
@@ -2130,7 +2189,7 @@ It can be one of the members of the <code>blending_preset</code> table: <code>DI
 <div class="sect1">
 <h2 id="_changelog">Changelog</h2>
 <div class="sectionbody">
-<h3 id="_27_september_2022" class="discrete">27 September 2022</h3>
+<h3 id="_27_september_2022_r74_on_itch_io" class="discrete">27 September 2022 (<strong>r74</strong> on Itch.io)</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -2146,6 +2205,9 @@ It can be one of the members of the <code>blending_preset</code> table: <code>DI
 </li>
 <li>
 <p><strong>[FIX]</strong> Close the file dialog modal popup before showing the quit confirmation one</p>
+</li>
+<li>
+<p><strong>[FIX]</strong> Show the quit confirmation modal window on Android</p>
 </li>
 </ul>
 </div>
